<resources>
    <string name="app_name">Vem Pra Quadra</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_menu_home_title">Home</string>
    <string name="main_menu_chat_title">Chat</string>
    <string name="main_menu_map_title">Map</string>
    <string name="main_menu_account_title">My account</string>
    <string name="profile_pic_default_description">Default profile picture</string>
    <string name="feed_item_title_default">Feed item title</string>
    <string name="feed_item_content_default">Feed item content, that describes the details of this feed item</string>
    <string name="feed_item_calendar_icon_description">Calendar icon</string>
    <string name="text_default_datetime">2022–01–01 08:00:00 a.m.</string>
    <string name="chat_item_contact_name_default">Contact name</string>
    <string name="chat_item_last_message_summary_default">Last message summarized</string>
    <string name="user_name_default">User\'s name</string>
    <string name="user_email_default">user@email.com</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="signup_personal_info_section_label">Personal info</string>
    <string name="name">Name</string>
    <string name="hint_signup_username">Username</string>
    <string name="hint_signup_birth_date">Date of birth</string>
    <string name="hint_signup_gender">Gender</string>
    <string name="hint_signup_email">E-mail</string>
    <string name="hint_signup_password">Password</string>
    <string name="hint_signup_password_confirm">Confirm password</string>
    <string name="main_menu_feed_title">Feed</string>
    <string name="main_menu_matches_title">Matches</string>
    <string name="chip_matches_list_title">List</string>
    <string name="chip_matches_map_title">Map</string>
    <string name="match_list_name_default">Match name</string>
    <string name="match_list_item_address_default">Match address</string>
    <string name="match_list_item_logo_description">Match logo</string>
    <string name="btn_signup_save_description">Save user information</string>
    <string name="hint_post_title">Title</string>
    <string name="hint_post_content">Content</string>
    <string name="text_action_cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="action_select_birth_text">Select birth date</string>
    <string name="e_mail">E-mail</string>
    <string name="main_menu_courts_title">Courts</string>
    <string name="court_name_text_default">Court name</string>
    <string name="court_address_text_default">Court address</string>
    <string name="text_court_distance_default">15 minutes from you</string>
    <string name="address">Address</string>
    <string name="date">Date</string>
    <string name="fab_create_match_content">Create match</string>
    <string name="court">Court</string>
    <string name="warning_required_field">Required field</string>
    <string name="chat_new_message_hint">Hello…</string>
    <string name="send_message">Send message</string>
    <string name="send">Send</string>
    <string name="chat_message_default_text">This is a message used as model do the default layout</string>
    <string name="sent_message_status_default">Sent message status</string>
    <string name="add_to_calendar">Add to calendar</string>
    <string name="join_match">Join match</string>
    <string name="leave_match">Leave match</string>
    <string name="unread_message_description">Unread message</string>
    <string name="text_default_date">01/01/2022</string>
    <string name="chat_no_messages_warning">No messages sent yet</string>
    <string name="date_format">MM/dd/yyyy</string>
    <string name="timezone">Brazil/West</string>
    <string name="datetime_format">MM/dd/yyyy hh:mm:ss</string>
    <string name="joined">Joined</string>
    <string name="past">Past</string>
    <string name="not_joined">Not joined</string>
    <string name="all">All</string>
    <string name="incoming">Incoming</string>
    <string name="update">Update</string>
</resources>