<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.chat.ChatListItemFragment"
    android:padding="20dp">

    <TextView
        android:id="@+id/text_chat_item_contact_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/text_chat_item_last_message_date"
        android:layout_marginEnd="8dp"
        android:text="@string/chat_item_contact_name_default" />

    <TextView
        android:id="@+id/text_chat_item_last_message_summary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_chat_item_contact_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/image_unread_message"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:text="@string/chat_item_last_message_summary_default"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/text_chat_item_last_message_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/text_default_date"
        android:textSize="12sp" />
    
    <ImageView
        android:id="@+id/image_unread_message"
        android:layout_height="@dimen/unread_message_size"
        android:layout_width="@dimen/unread_message_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_circle"
        app:tint="@color/red"
        android:contentDescription="@string/unread_message_description"
        android:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>