<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.match.MatchListFragment">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chips_match_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:singleLine="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_filter_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Chip.Filter"
            android:text="@string/incoming"
            android:checked="true"
            app:chipIcon="@drawable/ic_check" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_filter_joined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Chip.Filter"
            android:text="@string/joined"
            app:chipIcon="@drawable/ic_check" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_filter_not_joined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Chip.Filter"
            android:text="@string/not_joined"
            app:chipIcon="@drawable/ic_check" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_filter_past"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Chip.Filter"
            android:text="@string/past"
            app:chipIcon="@drawable/ic_check" />

    </com.google.android.material.chip.ChipGroup>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/match_swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/chips_match_list"
        app:layout_constraintBottom_toBottomOf="parent">

         <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_match_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_create_match"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_add"
        android:layout_margin="16dp"
        android:contentDescription="@string/fab_create_match_content" />

</androidx.constraintlayout.widget.ConstraintLayout>