<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.chat.ChatItemFragment"
    android:padding="12dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_chat_item_profile_pic"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="60dp"
        android:padding="10dp">

        <ImageView
            android:id="@+id/image_chat_item_profile_pic"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:src="@drawable/ic_profile_pic_default"
            android:contentDescription="@string/profile_pic_default_description" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text_chat_item_contact_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/card_chat_item_profile_pic"
        app:layout_constraintStart_toEndOf="@id/card_chat_item_profile_pic"
        android:layout_marginStart="16dp"
        android:text="@string/chat_item_contact_name_default" />

    <TextView
        android:id="@+id/text_chat_item_last_message_summary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_chat_item_contact_name"
        app:layout_constraintStart_toEndOf="@id/card_chat_item_profile_pic"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/chat_item_last_message_summary_default"
        android:textSize="12sp" />

</androidx.constraintlayout.widget.ConstraintLayout>