<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.match.MatchesFragment">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_matches"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.chip.ChipGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"
        app:singleSelection="true"
        app:selectionRequired="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_matches_list"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/chip_matches_list_title"
            app:chipIcon="@drawable/ic_main_menu_match_list"
            android:focusable="true"
            android:clickable="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_matches_map"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/chip_matches_map_title"
            app:chipIcon="@drawable/ic_main_menu_map"
            android:focusable="true"
            android:clickable="true" />

    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_signup_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp"
        android:focusable="true"
        android:clickable="true"
        android:src="@drawable/ic_add"
        android:contentDescription="@string/btn_signup_save_description" />

</androidx.constraintlayout.widget.ConstraintLayout>