<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.match.MatchListItemFragment"
    android:padding="12dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_match_list_item_logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="60dp"
        android:padding="10dp">

        <ImageView
            android:id="@+id/image_match_list_item_logo"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:src="@drawable/ic_profile_pic_default"
            android:contentDescription="@string/match_list_item_logo_description" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text_match_list_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/card_match_list_item_logo"
        app:layout_constraintStart_toEndOf="@id/card_match_list_item_logo"
        android:layout_marginStart="16dp"
        android:text="@string/match_list_name_default"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_match_list_item_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_match_list_item_name"
        app:layout_constraintStart_toEndOf="@id/card_match_list_item_logo"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/match_list_item_address_default"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/text_match_list_item_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_match_list_item_address"
        app:layout_constraintStart_toEndOf="@id/card_match_list_item_logo"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/feed_item_created_date_default"
        android:textSize="12sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>